--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,8 @@ project.fragment.lock.json
 _ReSharper*/
 resharper.xml
  
+.vs/Blogizm/FileContentIndex/0671e364-1a42-49a7-ac7b-8371588d056c.vsidx
+.vs/Blogizm/FileContentIndex/8834e99e-2d4b-4073-a0f7-ccb26395d698.vsidx
+.vs/Blogizm/v17/.futdcache.v2
+.vs/Blogizm/v17/.suo
+.vs/Blogizm/v17/DocumentLayout.json
