--- a/Blogizm.WebUI/Properties/launchSettings.json
+++ b/Blogizm.WebUI/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7257;http://localhost:5276",
+      "applicationUrl": "https://192.168.1.93;http://localhost:5276",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
